Bug 1801840 - Go back to using .browserStack rather than .browserContainer for tab dialog box. r=Gijs,nchevobbe
This makes alert take the same area as the status panel, partially
backing out the regressing bug.

.browserStack is also relatively-positioned, so this works too. I think
I didn't realize this while writing bug 1791972 because the rule was in
a UA sheet (all <stack>s are relatively positioned, apparently).

This restores the behavior when devtools is toggled vertically. On
responsive mode this still covers the top toolbar, but that was the
pre-existing behavior. Could be fixed in a follow-up with some z-index
tweaking...

Differential Revision: https://phabricator.services.mozilla.com/D162739

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1683,7 +1683,7 @@ toolbar[keyNav=true]:not([collapsed=true], [customizing=true]) toolbartabstop {
 }
 
 /* Hide tab-modal dialogs when a window-modal one is up. */
-:root[window-modal-open] .browserContainer > .dialogStack {
+:root[window-modal-open] .browserStack > .dialogStack {
   visibility: hidden;
 }
 
